--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h1 class="text-3xl font-black uppercase tracking-tighter leading-none">IS2 HUB</h1>
             </div>
             <div class="flex items-center gap-3">
-                <button onclick="toggleTheme()" class="theme-toggle-btn w-10 h-10 flex items-center justify-center bg-zinc-500/10 rounded-full shadow-lg">
+                <button onclick="toggleTheme()" class="w-10 h-10 flex items-center justify-center bg-zinc-500/10 rounded-full shadow-lg">
                     <span id="theme-icon" class="text-lg">☀️</span>
                 </button>
                 <div class="status-pill shadow-lg bg-zinc-500/10 px-4 py-2 rounded-full flex items-center gap-2">
@@ -45,37 +45,29 @@
 
         <div id="next-deadline-area"></div>
 
-        <main class="grid grid-cols-1 lg:grid-cols-12 gap-6 md:gap-10">
+        <main class="grid grid-cols-1 lg:grid-cols-12 gap-8">
             <div class="lg:col-span-4 space-y-6">
                 <section class="ios-card shadow-2xl">
                     <h2 class="text-xl font-bold mb-6 tracking-tight">New Entry</h2>
                     <div class="space-y-4">
                         <div class="grid grid-cols-2 gap-3">
-                            <button id="btn-kategori" onclick="openSelect('kategori')" class="ios-select-btn active:scale-95 transition-all">Assignment</button>
-                            <button id="btn-priority" onclick="openSelect('priority')" class="ios-select-btn active:scale-95 transition-all">Medium</button>
+                            <button id="btn-kategori" onclick="openSelect('kategori')" class="ios-select-btn">Assignment</button>
+                            <button id="btn-priority" onclick="openSelect('priority')" class="ios-select-btn">Medium</button>
                         </div>
                         <div class="relative">
-                            <input
-                                type="text"
-                                id="tglDeadline"
-                                placeholder="Pilih Tanggal"
-                                class="ios-input cursor-pointer"
-                                readonly
-                                onfocus="this.blur();"
-                                onclick="toggleDatePicker(event)"
-                            />
-                            <div id="custom-datepicker" class="hidden absolute top-full left-0 mt-2 w-full ios-card z-[9999] p-5 shadow-2xl scale-95 opacity-0 transition-all duration-300 pointer-events-none">
+                            <input type="text" id="tglDeadline" placeholder="Pilih Tanggal" class="ios-input cursor-pointer" readonly onfocus="this.blur();" onclick="toggleDatePicker(event)" />
+                            <div id="custom-datepicker" class="hidden absolute top-full left-0 mt-2 w-full ios-card z-[9999] p-5 shadow-2xl scale-95 opacity-0 transition-all duration-300">
                                 <div class="flex justify-between items-center mb-4">
-                                    <button onclick="event.stopPropagation(); changeMonth(-1);" class="p-2 font-black text-[10px] opacity-40 hover:opacity-100">PREV</button>
+                                    <button onclick="event.stopPropagation(); changeMonth(-1);" class="p-2 font-black text-[10px] opacity-40">PREV</button>
                                     <span id="currentMonthYear" class="text-[10px] font-black tracking-widest uppercase"></span>
-                                    <button onclick="event.stopPropagation(); changeMonth(1);" class="p-2 font-black text-[10px] opacity-40 hover:opacity-100">NEXT</button>
+                                    <button onclick="event.stopPropagation(); changeMonth(1);" class="p-2 font-black text-[10px] opacity-40">NEXT</button>
                                 </div>
                                 <div id="datepicker-days" class="grid grid-cols-7 gap-1 text-center"></div>
                             </div>
                         </div>
                         <textarea id="isiData" placeholder="Tugas apa hari ini?" class="ios-input h-24 pt-4 resize-none"></textarea>
                         <input type="url" id="linkData" placeholder="Link Resource (Opsional)" class="ios-input" />
-                        <button onclick="simpanData()" class="ios-primary-btn shadow-xl active:scale-95 transition-transform">Update Hub</button>
+                        <button onclick="simpanData()" class="ios-primary-btn active:scale-95 transition-transform">Update Hub</button>
                     </div>
                 </section>
             </div>
