--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="id" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
     />
     <title>IS2 HUB | ULTIMATE SYNC</title>
 
@@ -66,29 +66,29 @@
             <span
               id="db-status-text"
               class="text-[8px] font-black uppercase tracking-widest opacity-30"
-              >Connecting</span
+              >Hub Active</span
             >
           </div>
         </div>
       </div>
     </header>
 
-    <div class="max-w-6xl mx-auto p-6 md:p-10 mt-6 relative z-10">
+    <div class="max-w-6xl mx-auto p-6 md:p-10 mt-2 relative z-10">
       <div
         id="next-deadline-area"
-        class="mb-10 min-h-[100px] relative z-20"
+        class="mb-8 min-h-[100px] relative z-20 pointer-events-none"
       ></div>
 
       <main class="grid grid-cols-1 lg:grid-cols-12 gap-10">
-        <div class="lg:col-span-5 lg:sticky lg:top-24">
-          <section class="glass-card p-8 border border-white/5">
+        <div class="lg:col-span-5 lg:sticky lg:top-24 relative z-30">
+          <section class="glass-card p-8 border border-white/5 relative">
             <h2
               class="text-[10px] font-black opacity-20 uppercase tracking-[0.3em] mb-6"
             >
               Mission Control
             </h2>
             <div class="space-y-4">
-              <div class="grid grid-cols-2 gap-3">
+              <div class="grid grid-cols-2 gap-3 relative z-[70]">
                 <button
                   id="btn-kategori"
                   onclick="openSelect('kategori')"
@@ -104,7 +104,8 @@
                   Medium
                 </button>
               </div>
-              <div class="grid grid-cols-2 gap-3 relative">
+
+              <div class="grid grid-cols-2 gap-3 relative z-[60]">
                 <input
                   type="text"
                   id="tglMulai"
@@ -121,17 +122,15 @@
                   readonly
                   onclick="toggleDatePicker(event, 'end')"
                 />
+                
                 <div
                   id="custom-datepicker"
                   class="hidden absolute left-0 right-0 top-full mt-2 glass-card z-[999] p-5 border border-white/10 shadow-2xl"
                 >
                   <div class="flex justify-between items-center mb-4">
                     <button
-                      onclick="
-                        event.stopPropagation();
-                        changeMonth(-1);
-                      "
-                      class="text-[9px] font-black opacity-30"
+                      onclick="event.stopPropagation(); changeMonth(-1);"
+                      class="p-2 text-[9px] font-black opacity-30"
                     >
                       PREV
                     </button>
@@ -140,11 +139,8 @@
                       class="text-[9px] font-black uppercase tracking-widest"
                     ></span>
                     <button
-                      onclick="
-                        event.stopPropagation();
-                        changeMonth(1);
-                      "
-                      class="text-[9px] font-black opacity-30"
+                      onclick="event.stopPropagation(); changeMonth(1);"
+                      class="p-2 text-[9px] font-black opacity-30"
                     >
                       NEXT
                     </button>
@@ -155,25 +151,28 @@
                   ></div>
                 </div>
               </div>
-              <textarea
-                id="isiData"
-                placeholder="What's the mission?"
-                class="ios-input h-24 pt-4 resize-none"
-              ></textarea>
-              <input
-                type="url"
-                id="linkData"
-                placeholder="https://link-tugas.com"
-                class="ios-input"
-              />
-              <button onclick="simpanData()" class="primary-btn">
-                Update Hub
-              </button>
+
+              <div class="space-y-4 relative z-10">
+                <textarea
+                  id="isiData"
+                  placeholder="What's the mission?"
+                  class="ios-input h-24 pt-4 resize-none"
+                ></textarea>
+                <input
+                  type="url"
+                  id="linkData"
+                  placeholder="https://link-tugas.com"
+                  class="ios-input"
+                />
+                <button onclick="simpanData()" class="primary-btn">
+                  Update Hub
+                </button>
+              </div>
             </div>
           </section>
         </div>
 
-        <div class="lg:col-span-7 space-y-6">
+        <div class="lg:col-span-7 space-y-6 relative z-10">
           <div id="listData" class="space-y-3"></div>
           <section class="glass-card p-6 border border-white/5">
             <h2
@@ -187,49 +186,11 @@
       </main>
     </div>
 
-    <div
-      id="calendar-detail-modal"
-      class="modal-overlay hidden"
-      onclick="closeCalendarDetail()"
-    >
+    <div id="calendar-detail-modal" class="modal-overlay hidden" onclick="closeCalendarDetail()">
       <div class="modal-card fade-in p-8" onclick="event.stopPropagation()">
-        <h3
-          id="detail-date-title"
-          class="text-[10px] font-black opacity-30 uppercase tracking-[0.3em] mb-6 text-center"
-        >
-          Date Details
-        </h3>
-        <div
-          id="calendar-task-list"
-          class="space-y-4 max-h-[40vh] overflow-y-auto"
-        ></div>
-        <button
-          onclick="closeCalendarDetail()"
-          class="w-full mt-8 py-4 bg-white/5 rounded-2xl font-black uppercase text-[10px] tracking-widest"
-        >
-          Close
-        </button>
-      </div>
-    </div>
-
-    <div
-      id="universal-modal"
-      class="modal-overlay hidden"
-      onclick="closeUniversalModal()"
-    >
-      <div
-        class="modal-card fade-in overflow-hidden border border-white/10"
-        onclick="event.stopPropagation()"
-      >
-        <div class="h-20 bg-white/5 flex items-center justify-center text-2xl">
-          ✓
-        </div>
-        <div class="p-8 text-center">
-          <h3 class="text-lg font-black mb-2">Synchronized</h3>
-          <button onclick="closeUniversalModal()" class="primary-btn py-4">
-            Dismiss
-          </button>
-        </div>
+        <h3 id="detail-date-title" class="text-[10px] font-black opacity-30 uppercase tracking-[0.3em] mb-6 text-center">Date Details</h3>
+        <div id="calendar-task-list" class="space-y-4 max-h-[40vh] overflow-y-auto"></div>
+        <button onclick="closeCalendarDetail()" class="w-full mt-8 py-4 bg-white/5 rounded-2xl font-black uppercase text-[10px]">Close</button>
       </div>
     </div>
 
@@ -239,29 +200,12 @@
       </div>
     </div>
 
-    <div
-      id="delete-modal"
-      class="modal-overlay hidden"
-      onclick="closeDeleteModal()"
-    >
-      <div
-        class="modal-card fade-in p-10 text-center"
-        onclick="event.stopPropagation()"
-      >
-        <h3 class="text-lg font-black mb-6">Remove?</h3>
+    <div id="delete-modal" class="modal-overlay hidden" onclick="closeDeleteModal()">
+      <div class="modal-card fade-in p-10 text-center" onclick="event.stopPropagation()">
+        <h3 class="text-lg font-black mb-6 uppercase tracking-tighter">Remove Task?</h3>
         <div class="grid grid-cols-2 gap-3">
-          <button
-            onclick="closeDeleteModal()"
-            class="py-4 bg-white/5 rounded-xl text-[9px] font-black uppercase"
-          >
-            No
-          </button>
-          <button
-            onclick="confirmDelete()"
-            class="py-4 bg-red-600 text-white rounded-xl text-[9px] font-black uppercase"
-          >
-            Yes
-          </button>
+          <button onclick="closeDeleteModal()" class="py-4 bg-white/5 rounded-xl text-[9px] font-black uppercase">No</button>
+          <button onclick="confirmDelete()" class="py-4 bg-red-600 text-white rounded-xl text-[9px] font-black uppercase">Yes</button>
         </div>
       </div>
     </div>
