--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>IS2 HUB | ULTIMATE SYNC</title>
+    <title>Information System 2 HUB</title>
 
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#000000" />
