--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <button
             onclick="toggleTheme()"
             class="px-4 py-2 bg-white/5 rounded-full flex items-center gap-2 border border-white/5 transition hover:bg-white/10 active:scale-95 cursor-pointer"
+            title="Toggle Theme"
           >
             <div
               id="db-status-dot"
